use yaml manage models

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1249,36 +1249,38 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "6b984f0e-11f4-42a2-a8c7-c83e692fb283",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import yaml\n",
+        "\n",
+        "def read_yaml_file(file_path):\n",
+        "    with open(file_path, 'r') as f:\n",
+        "        yaml_data = yaml.safe_load(f)\n",
+        "    return yaml_data\n",
+        "\n",
+        "# \u8c03\u7528\u51fd\u6570\u5e76\u4f20\u5165YAML\u6587\u4ef6\u8def\u5f84\n",
+        "models_yaml_path = os.path.join(repo_root_dir,'./configs/models_list/models.yaml')\n",
+        "models_list = read_yaml_file(models_yaml_path)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "b2a517b5-d1b5-4e34-aa85-a516fa2d04a5",
       "metadata": {},
       "outputs": [],
       "source": [
         "# Stable-diffusion \u6a21\u578b\n",
-        "sd_models = [\n",
-        "    'v2-1_768-nonema-pruned.ckpt',  # SD 2.1\u6a21\u578b\n",
-        "    'chilloutmix_NiPrunedFp16.safetensors',  # ChilloutMix\u00b7\u9ad8\u6e05\u5199\u5b9e\u771f\u4eba\u6a21\u578b\n",
-        "    'abyssorangemix3AOM3_aom3a3.safetensors',  # AOM3\u00b7\u4e8c\u6b21\u5143\u6a21\u578b\n",
-        "    'camelliamixLine_v10.safetensors',  # \u4e8c\u6b21\u5143\u7c97\u63cf\u8fb9\u6a21\u578b\n",
-        "    'expmixLine_v20.safetensors',  # \u4e8c\u6b21\u5143\u7c97\u63cf\u8fb9\u6a21\u578b\n",
-        "    'anything-v4.5-pruned-fp16.ckpt',  # Anything\u7cfb\u5217\u6a21\u578b\n",
-        "    'anything-v4.0-pruned-fp16.safetensors',  # Anything\u7cfb\u5217\u6a21\u578b\n",
-        "    'PVC-AO.safetensors',  # PVC\u624b\u529e\u6a21\u578b\n",
-        "    'midjourneyPapercut_v1.ckpt'  # PVC\u624b\u529e\u6a21\u578b\n",
-        "    'CamelliaMix_2.5D-fp16-pruned.safetensors',\n",
-        "    'CamelliaMix_Line_V2.safetensors',\n",
-        "    'Camelliamix_V2-fp16-pruned.safetensors',\n",
-        "    'abyssorangemix3AOM3_aom3.safetensors',\n",
-        "]\n",
+        "sd_models = models_list['sd_models']\n",
         "\n",
         "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
         "for model in sd_models:\n",
         "    check_model_and_make_symbollink(model, './models/Stable-diffusion', copy_or_mount)\n",
         "\n",
         "# VAE\u6a21\u578b\n",
-        "vae_models = [\n",
-        "    'orangemix.vae.pt',\n",
-        "    'kl-f8-anime2.ckpt'\n",
-        "]\n",
+        "vae_models = models_list['vae_models']\n",
         "\n",
         "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
         "for model in vae_models:\n",
@@ -1356,15 +1358,10 @@
       "outputs": [],
       "source": [
         "# \u5d4c\u5165\u6a21\u578b\n",
-        "ti_embeddings = [\n",
-        "    'bad_prompt_version2.pt', # https://huggingface.co/datasets/Nerfgun3/bad_prompt\n",
-        "    'EasyNegative.safetensors', # https://civitai.com/models/7808/easynegative\n",
-        "    'ng_deepnegative_v1_75t.pt', # https://civitai.com/models/4629/deep-negative-v1x\n",
-        "    'badhandv4.pt', # https://civitai.com/models/16993/badhandv4-animeillustdiffusion\n",
-        "]\n",
+        "embeddings = models_list['embeddings']\n",
         "\n",
         "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
-        "for model in ti_embeddings:\n",
+        "for model in embeddings:\n",
         "    check_model_and_make_symbollink(model, './embeddings', copy_or_mount)"
       ]
     },
@@ -1415,31 +1412,7 @@
         "\n",
         "for i in [SD_orig_Lora_dir]:\n",
         "    # \u6a21\u578b\n",
-        "    LoRA_models = [\n",
-        "        'Akira Toriyama.safetensors',  # \u9e1f\u5c71\u660e\u98ce\u683c\n",
-        "        'Makima.safetensors',  # \u7535\u952f\u4eba \u739b\u5947\u739b\n",
-        "        'animeScreencapStyle_v230epochs.safetensors',  # \u52a8\u753b\u7247\u8d28\u611f\n",
-        "        'kamehameha.safetensors',  # \u9f9f\u6ce2\u6c14\u529f\n",
-        "        'lisaLoraCollectionOf_singleLoraLisa.safetensors',  # \u539f\u795e \u4e3d\u838e \u6a21\u578b\n",
-        "        'princess zelda.safetensors',  # \u585e\u5c14\u8fbe\u516c\u4e3b\u6a21\u578b\n",
-        "        'pyraMythraPneuma_50Epochs.safetensors',  # \u5f02\u5ea6\u4e4b\u5203\u6a21\u578b\n",
-        "        'wlop.safetensors',  # wlop\u753b\u98ce\u6a21\u578b\n",
-        "        'yakumo_yukari.pt',  # \u516b\u4e91\u7d2b\u6a21\u578b\n",
-        "        'atomicHeartTwins_v1.safetensors',  # \u539f\u5b50\u4e4b\u5fc3 \u53cc\u751f\u821e\u4f36\u6a21\u578b\n",
-        "        'atomictwinnies_v10.safetensors',  # \u539f\u5b50\u4e4b\u5fc3 \u53cc\u751f\u821e\u4f36\u6a21\u578b\n",
-        "        'bliznyashkiTheTwins_v1.safetensors',  # \u539f\u5b50\u4e4b\u5fc3 \u53cc\u751f\u821e\u4f36\u6a21\u578b\n",
-        "        'epiNoiseoffset_v2.safetensors',  # Noise Offset\u6a21\u578b\n",
-        "        'epiNoiseoffset_v2Pynoise.safetensors',  # Noise Offset\u6a21\u578b\n",
-        "        'Moxin_10.safetensors',  # \u58a8\u5fc3\u98ce\u683c\n",
-        "        'charturnerbetaLora_charturnbetalora.safetensors',  # \u89d2\u8272\u591a\u89c6\u89d2\u56fe\n",
-        "        'animeLineartStyle_v20Offset.safetensors',  # \u7ebf\u7a3f\n",
-        "        'tokiameStyleThick.safetensors',  # \u7ebf\u7a3f\n",
-        "        'thickerLinesAnimeStyle_loraVersion.safetensors',  # \u63cf\u8fb9\n",
-        "        'LuisapPixelArtLORA_v1.safetensors',  # \u50cf\u7d20\u98ce\n",
-        "        'aespaKarina_aespaKarinaV2.safetensors', # \u67f3\u59d0v2\n",
-        "        'aespaKarina_aespaKarinaV3.safetensors', # \u67f3\u59d0v3\n",
-        "        'cuteJointsDollsLora_2.safetensors', # BJD\u516c\u4ed4\u6548\u679c\n",
-        "    ]\n",
+        "    LoRA_models = models_list['LoRA_models']\n",
         "\n",
         "    # \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u6a21\u578b\n",
         "    for model in LoRA_models:\n",
