--- a/tools/proxy_tools/clash_install_and_setup.ipynb
+++ b/tools/proxy_tools/clash_install_and_setup.ipynb
@@ -109,7 +109,7 @@
         "    os.makedirs(os.path.join(root_dir, clash_run_dir), exist_ok=True)\n",
         "\n",
         "    local_path = os.path.join(root_dir, clash_install_dir, file_name)\n",
-        "    run_path = os.path.join(root_dir, clash_run_dir, 'clash')\n",
+        "    run_path = os.path.join(root_dir, clash_run_dir, file_name)\n",
         "    \n",
         "    if not os.path.exists(local_path):\n",
         "        os.system(f'wget -P {os.path.join(root_dir, clash_install_dir)} {download_url}')\n",
@@ -137,23 +137,6 @@
       "outputs": [],
       "source": [
         "import os\n",
-        "\n",
-        "# def download_clash(root_dir, clash_version, clash_install_dir, clash_run_dir):\n",
-        "#     check_dist = os.path.join(root_dir, clash_install_dir, f'clash-linux-amd64-{clash_version}.gz')\n",
-        "#     clash_run_dist = os.path.join(root_dir, clash_run_dir, f'clash-linux-amd64-{clash_version}.gz')\n",
-        "#     if not os.path.exists(os.path.join(root_dir, clash_run_dir)):\n",
-        "#         os.makedirs(os.path.join(root_dir, clash_run_dir))\n",
-        "#     if os.path.isfile(check_dist):\n",
-        "#         print(\"Clash\u5df2\u7ecf\u4e0b\u8f7d\u3002\")\n",
-        "#         !cp $check_dist $clash_run_dist\n",
-        "#     else:\n",
-        "#         !wget -P {root_dir}/{clash_install_dir} https://github.com/Dreamacro/clash/releases/download/{clash_version}/clash-linux-amd64-{clash_version}.gz\n",
-        "#     !gunzip {clash_run_dist}\n",
-        "#     clash_EXEC = os.path.join(root_dir, clash_run_dir, f'clash-linux-amd64-{clash_version}')\n",
-        "#     clash_Sim_EXEC = os.path.join(root_dir, clash_run_dir, 'clash')\n",
-        "#     !chmod +x $clash_EXEC\n",
-        "#     !mv $clash_EXEC $clash_Sim_EXEC\n",
-        "#     print(\"Clash\u5df2\u7ecf\u5b89\u88c5\u3002\")\n",
         "    \n",
         "def download_config(root_dir, config_name, config_dir, mmdb_name, mmdb_dir, clash_install_dir, config_yaml_dist,origin_yaml_dist):\n",
         "    clash_install_path = os.path.join(root_dir, clash_install_dir)\n",
@@ -235,6 +218,12 @@
         "\n",
         "def run_clash(root_dir, config_dir, clash_run_dir, config_yaml_dist):\n",
         "    clash_run_path = os.path.join(root_dir, clash_run_dir)\n",
+        "    \n",
+        "    # \u5982\u679c\u76ee\u5f55\u4e0d\u5b58\u5728\uff0c\u521b\u5efa\u76ee\u5f55\u5e76\u66f4\u6539\u6743\u9650\n",
+        "    if not os.path.exists(clash_run_path):\n",
+        "        os.makedirs(clash_run_path)\n",
+        "        os.chmod(clash_run_path, 0o777) # \u8bbe\u7f6e\u76ee\u5f55\u6743\u9650\u4e3a 777\n",
+        "\n",
         "    clash_Sim_EXEC = os.path.join(clash_run_path, 'clash')\n",
         "    cmd = [clash_Sim_EXEC, '-d', os.path.dirname(config_yaml_dist)]\n",
         "    print(cmd)\n",
