--- a/tools/proxy_tools/clash_install_and_setup.ipynb
+++ b/tools/proxy_tools/clash_install_and_setup.ipynb
@@ -59,7 +59,18 @@
         "%cd $repo_root_dir\n",
         "%run ./nbfunc/hub.ipynb\n",
         "\n",
-        "initGit()"
+        "initGit()\n",
+        "\n",
+        "%cd .."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "46a2cd38-32ec-4007-a668-71dd4e236aa6",
+      "metadata": {},
+      "source": [
+        "# \u68c0\u6d4bClash\n",
+        "\u68c0\u6d4bClash\u662f\u5426\u53ef\u4ee5\u8fd0\u884c\uff0c\u5982\u679c\u4e0d\u884c\uff0c\u5219\u8fdb\u884c\u4e0b\u8f7d\uff0c\u5e76\u89e3\u538b"
       ]
     },
     {
@@ -74,48 +85,44 @@
         "import os\n",
         "import requests\n",
         "import time\n",
+        "import glob  # \u5bfc\u5165 glob \u6a21\u5757\n",
         "\n",
-        "def download_and_install_clash(root_dir, clash_install_dir, clash_run_dir):\n",
-        "    def get_latest_clash_download_url(retries=1, backoff=1):\n",
-        "        url = 'https://api.github.com/repos/Dreamacro/clash/releases/latest'\n",
+        "def get_latest_clash_download_url(retries=1, backoff=1):\n",
+        "    url = 'https://api.github.com/repos/Dreamacro/clash/releases/latest'\n",
         "\n",
-        "        for _ in range(retries):\n",
-        "            try:\n",
-        "                response = requests.get(url)\n",
-        "                response.raise_for_status()\n",
-        "                json_data = response.json()\n",
-        "                for asset in json_data['assets']:\n",
-        "                    if 'clash-linux-amd64' in asset['name']:\n",
-        "                        return asset['browser_download_url'], json_data['tag_name']\n",
-        "                return '', ''\n",
-        "            except requests.exceptions.RequestException as e:\n",
-        "                print(f\"\u8bf7\u6c42\u51fa\u9519: {e}\")\n",
-        "                time.sleep(backoff)\n",
-        "        else:\n",
-        "            print(\"\u8fbe\u5230\u6700\u5927\u91cd\u8bd5\u6b21\u6570\uff0c\u83b7\u53d6\u6700\u65b0\u7248\u672c\u4e0b\u8f7d\u94fe\u63a5\u5931\u8d25\")\n",
+        "    for _ in range(retries):\n",
+        "        try:\n",
+        "            response = requests.get(url)\n",
+        "            response.raise_for_status()\n",
+        "            json_data = response.json()\n",
+        "            for asset in json_data['assets']:\n",
+        "                if 'clash-linux-amd64' in asset['name']:\n",
+        "                    return asset['browser_download_url'], json_data['tag_name']\n",
         "            return '', ''\n",
-        "\n",
-        "    download_url, latest_version = get_latest_clash_download_url()\n",
-        "    if not download_url:\n",
-        "        print('\u83b7\u53d6\u6700\u65b0\u7248\u672c\u4e0b\u8f7d\u94fe\u63a5\u5931\u8d25')\n",
-        "        # return\n",
-        "    if not download_url:\n",
-        "        file_name = 'clash-linux-amd64-v1.14.0.gz'\n",
-        "        latest_version = '1.14.0'\n",
+        "        except requests.exceptions.RequestException as e:\n",
+        "            print(f\"\u8bf7\u6c42\u51fa\u9519: {e}\")\n",
+        "            time.sleep(backoff)\n",
         "    else:\n",
-        "        file_name = download_url.split('/')[-1]\n",
-        "        \n",
-        "    os.makedirs(os.path.join(root_dir, clash_install_dir), exist_ok=True)\n",
-        "    os.makedirs(os.path.join(root_dir, clash_run_dir), exist_ok=True)\n",
+        "        print(\"\u8fbe\u5230\u6700\u5927\u91cd\u8bd5\u6b21\u6570\uff0c\u83b7\u53d6\u6700\u65b0\u7248\u672c\u4e0b\u8f7d\u94fe\u63a5\u5931\u8d25\")\n",
+        "        return '', ''\n",
         "\n",
+        "def download_clash_installer(download_url, root_dir, clash_install_dir):\n",
+        "    file_name = download_url.split('/')[-1]\n",
         "    local_path = os.path.join(root_dir, clash_install_dir, file_name)\n",
-        "    run_path = os.path.join(root_dir, clash_run_dir, file_name)\n",
-        "    \n",
+        "\n",
+        "    os.makedirs(os.path.join(root_dir, clash_install_dir), exist_ok=True)\n",
+        "\n",
         "    if not os.path.exists(local_path):\n",
         "        os.system(f'wget -P {os.path.join(root_dir, clash_install_dir)} {download_url}')\n",
         "        print(f\"\u5df2\u4e0b\u8f7d\u6587\u4ef6 {file_name}\")\n",
         "    else:\n",
         "        print(f\"\u6587\u4ef6 {file_name} \u5df2\u5b58\u5728\uff0c\u65e0\u9700\u4e0b\u8f7d\")\n",
+        "\n",
+        "    return local_path\n",
+        "\n",
+        "def extract_clash_installer(local_path, root_dir, clash_run_dir, latest_version):\n",
+        "    run_path = os.path.join(root_dir, clash_run_dir, os.path.basename(local_path))\n",
+        "    os.makedirs(os.path.join(root_dir, clash_run_dir), exist_ok=True)\n",
         "\n",
         "    os.system(f'cp {local_path} {run_path}')\n",
         "    os.system(f'gunzip {run_path}')\n",
@@ -126,7 +133,56 @@
         "    os.system(f'chmod +x {clash_exec}')\n",
         "    os.system(f'mv {clash_exec} {clash_sim_exec}')\n",
         "\n",
-        "    print(\"Clash\u5df2\u7ecf\u5b89\u88c5\u3002\")\n"
+        "    return clash_sim_exec\n",
+        "\n",
+        "def check_clash_executable(root_dir, clash_run_dir):\n",
+        "    clash_sim_exec = os.path.join(root_dir, clash_run_dir, 'clash')\n",
+        "    if os.path.exists(clash_sim_exec) and os.access(clash_sim_exec, os.X_OK):\n",
+        "        print(\"Clash\u5df2\u7ecf\u5b89\u88c5,\u5e76\u53ef\u4ee5\u6267\u884c\u3002\")\n",
+        "        return True\n",
+        "    elif os.path.exists(clash_sim_exec):\n",
+        "        print(\"Clash\u5df2\u7ecf\u5b89\u88c5,\u4f46\u4e0d\u53ef\u4ee5\u6267\u884c\uff0c\u5373\u5c06\u91cd\u88c5\u3002\")\n",
+        "        os.remove(clash_sim_exec)\n",
+        "        return False\n",
+        "    else:\n",
+        "        return False\n",
+        "\n",
+        "def download_and_install_clash(root_dir, clash_install_dir, clash_run_dir):\n",
+        "    if check_clash_executable(root_dir, clash_run_dir):\n",
+        "        return\n",
+        "\n",
+        "    clash_installer_prefix = 'clash-linux-amd64-'\n",
+        "    clash_installer_suffix = '.gz'\n",
+        "    clash_installer_pattern = clash_installer_prefix + '*' + clash_installer_suffix\n",
+        "    clash_installer_glob = os.path.join(root_dir, clash_install_dir, clash_installer_pattern)\n",
+        "    clash_installer_paths = sorted(glob.glob(clash_installer_glob), reverse=True)\n",
+        "\n",
+        "    if clash_installer_paths:\n",
+        "        clash_installer_path = clash_installer_paths[0]\n",
+        "        clash_installer_name = os.path.basename(clash_installer_path)\n",
+        "        clash_version = clash_installer_name[len(clash_installer_prefix):-len(clash_installer_suffix)]\n",
+        "        print(f\"\u53d1\u73b0 {clash_installer_name} \u6587\u4ef6\uff0c\u5c06\u8fdb\u884c\u89e3\u538b\u5e76\u5b89\u88c5\u3002\")\n",
+        "        clash_sim_exec = extract_clash_installer(clash_installer_path, root_dir, clash_run_dir, clash_version)\n",
+        "    else:\n",
+        "        download_url, latest_version = get_latest_clash_download_url()\n",
+        "        if not download_url:\n",
+        "            print('\u83b7\u53d6\u6700\u65b0\u7248\u672c\u4e0b\u8f7d\u94fe\u63a5\u5931\u8d25')\n",
+        "            return\n",
+        "        clash_version = latest_version\n",
+        "        file_name = f\"{clash_installer_prefix}{clash_version}{clash_installer_suffix}\"\n",
+        "        local_path = download_clash_installer(download_url, root_dir, clash_install_dir)\n",
+        "        clash_sim_exec = extract_clash_installer(local_path, root_dir, clash_run_dir, clash_version)\n",
+        "\n",
+        "    if not check_clash_executable(root_dir, clash_run_dir):\n",
+        "        print(\"Clash\u5b89\u88c5\u5931\u8d25\uff0c\u8bf7\u68c0\u67e5\u6743\u9650\u7b49\u95ee\u9898\u3002\")\n",
+        "        return\n",
+        "\n",
+        "    print(\"Clash\u5df2\u7ecf\u5b89\u88c5\u3002\")\n",
+        "\n",
+        "clash_install_dir = \"clashInstall\"\n",
+        "clash_run_dir = \"clash_run\"\n",
+        "\n",
+        "download_and_install_clash(root_dir, clash_install_dir, clash_run_dir)"
       ]
     },
     {
@@ -211,9 +267,29 @@
         "from IPython.display import display\n",
         "from ipywidgets import Output\n",
         "\n",
+        "import colorama\n",
+        "from colorama import Fore, Style\n",
+        "import re\n",
+        "\n",
+        "colorama.init()\n",
+        "\n",
         "def stream_output(process, output_widget):\n",
         "    for line in iter(process.stdout.readline, b''):\n",
-        "        output_widget.append_stdout(line.decode('utf-8'))\n",
+        "        line = line.decode('utf-8')\n",
+        "        match = re.search('time=\"([^\"]*)\" level=([^ ]*) msg=\"([^\"]*)\"', line)\n",
+        "        if match:\n",
+        "            level = match.group(2)\n",
+        "            if level == 'info':\n",
+        "                level_str = Fore.CYAN + '[INFO]' + Style.RESET_ALL\n",
+        "            elif level == 'warning':\n",
+        "                level_str = Fore.YELLOW + '[WARNING]' + Style.RESET_ALL\n",
+        "            elif level == 'error':\n",
+        "                level_str = Fore.RED + '[ERROR]' + Style.RESET_ALL\n",
+        "            else:\n",
+        "                level_str = level\n",
+        "            output_widget.append_stdout(level_str + ' ' + match.group(3) + '\\n')\n",
+        "        else:\n",
+        "            output_widget.append_stdout(Fore.MAGENTA + '[UNDEFINED]' + Style.RESET_ALL + ' ' + line + '\\n')\n",
         "    process.stdout.close()\n",
         "\n",
         "def run_clash(root_dir, config_dir, clash_run_dir, config_yaml_dist):\n",
@@ -225,8 +301,12 @@
         "        os.chmod(clash_run_path, 0o777) # \u8bbe\u7f6e\u76ee\u5f55\u6743\u9650\u4e3a 777\n",
         "\n",
         "    clash_Sim_EXEC = os.path.join(clash_run_path, 'clash')\n",
+        "    \n",
+        "    # !{clash_Sim_EXEC} -d {os.path.dirname(config_yaml_dist)}\n",
+        "    \n",
         "    cmd = [clash_Sim_EXEC, '-d', os.path.dirname(config_yaml_dist)]\n",
-        "    print(cmd)\n",
+        "\n",
+        "    print((' ').join(cmd))\n",
         "\n",
         "    # \u521b\u5efa\u4e00\u4e2a Output \u5c0f\u90e8\u4ef6\n",
         "    output_widget = Output()\n",
@@ -238,8 +318,7 @@
         "    # \u521b\u5efa\u4e00\u4e2a\u7ebf\u7a0b\u6765\u8bfb\u53d6\u5b50\u8fdb\u7a0b\u7684\u8f93\u51fa\u5e76\u5c06\u5176\u53d1\u9001\u5230 Output \u5c0f\u90e8\u4ef6\n",
         "    output_thread = threading.Thread(target=stream_output, args=(process, output_widget))\n",
         "    output_thread.start()\n",
-        "    \n",
-        "    \n",
+        "\n",
         "\n",
         "key_values_dict = {\n",
         "    'external-controller': '127.0.0.1:7776',\n",
@@ -253,12 +332,10 @@
         "config_dir = \".config/clash\"\n",
         "mmdb_name = \"Country.mmdb\"\n",
         "mmdb_dir = \".config/clash\"\n",
-        "clash_install_dir = \"clashInstall\"\n",
-        "clash_run_dir = \"clash_run\"\n",
+        "\n",
         "origin_yaml_dist = os.path.join(root_dir, clash_install_dir, config_name)\n",
         "config_yaml_dist = os.path.join(root_dir, config_dir, 'config.yaml')\n",
         "\n",
-        "download_and_install_clash(root_dir, clash_install_dir, clash_run_dir)\n",
         "download_config(root_dir, config_name, config_dir, mmdb_name, mmdb_dir, clash_install_dir,config_yaml_dist,origin_yaml_dist)\n",
         "modify_yaml_config(config_yaml_dist, key_values_dict)\n",
         "yaml_config_clean(config_yaml_dist)\n",
