--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -795,6 +795,7 @@
         "        'git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui',\n",
         "        '&&',\n",
         "        'cd stable-diffusion-webui','&&',\n",
+        "        'git reset --hard 91ae48fd7e20c60d6374f340cac0939f56d87048','&&',\n",
         "        # 'git checkout d8f8bcb','&&'\n",
         "        'python -V',\n",
         "        '&&',\n",
@@ -2111,9 +2112,9 @@
       },
       "outputs": [],
       "source": [
-        "!pip install gradio==3.23 -i https://pypi.org/simple\n",
-        "!pip install clip-interrogator==0.6.0 --prefer-binary -i https://pypi.org/simple\n",
-        "!pip install transformers -i https://pypi.org/simple"
+        "!pip install gradio==3.23 -i https://pypi.org/simple --user\n",
+        "!pip install clip-interrogator==0.6.0 --prefer-binary -i https://pypi.org/simple --user\n",
+        "!pip install transformers -i https://pypi.org/simple --user"
       ]
     },
     {
@@ -2173,7 +2174,10 @@
         "    '--disable-safe-unpickle',\n",
         "    '--no-half-vae',\n",
         "    '--disable-nan-check',\n",
-        "    '--api'\n",
+        "    '--api',\n",
+        "    # '--skip-python-version-check',\n",
+        "    # '--skip-torch-cuda-test',\n",
+        "    # '--skip-install'\n",
         "    # '--no-half'\n",
         "       ]\n",
         "\n",
