--- a/tools/proxy_tools/clash_install_and_setup.ipynb
+++ b/tools/proxy_tools/clash_install_and_setup.ipynb
@@ -66,6 +66,74 @@
     },
     {
       "cell_type": "markdown",
+      "id": "00e32982-1bfb-46ed-b217-04be17b10d13",
+      "metadata": {},
+      "source": [
+        "## <i class=\"fa fa-arrow-down\"></i> \u5b89\u88c5\u5fc5\u8981\u4f9d\u8d56"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ab849f78-e73a-48b6-b10c-84cb9d90b2f2",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import subprocess\n",
+        "\n",
+        "libraries_to_install = [\n",
+        "    'colorama'\n",
+        "]\n",
+        "\n",
+        "tools_to_install = [\n",
+        "    \"iputils-ping\",\n",
+        "]\n",
+        "\n",
+        "def extract_library_name(library):\n",
+        "    \"\"\"\u4ece\u5e93\u540d\u4e2d\u63d0\u53d6\u51fa\u5305\u7684\u540d\u79f0\"\"\"\n",
+        "    return library.split(\"==\")[0]\n",
+        "\n",
+        "def get_installed_libraries():\n",
+        "    \"\"\"\u83b7\u53d6\u5df2\u5b89\u88c5\u7684\u5e93\u5217\u8868\"\"\"\n",
+        "    output = subprocess.check_output([\"pip\", \"freeze\"])\n",
+        "    installed_libraries = output.decode().split(\"\\n\")\n",
+        "    return set([extract_library_name(library) for library in installed_libraries])\n",
+        "\n",
+        "def install_library(library):\n",
+        "    \"\"\"\u5b89\u88c5\u6307\u5b9a\u7684\u5e93\"\"\"\n",
+        "    !pip install $library --user\n",
+        "\n",
+        "# \u83b7\u53d6\u5df2\u5b89\u88c5\u7684\u5e93\u5217\u8868\n",
+        "installed_libraries = get_installed_libraries()\n",
+        "\n",
+        "# \u627e\u51fa\u672a\u5b89\u88c5\u7684\u5e93\u5e76\u5b89\u88c5\n",
+        "libraries_to_install_filtered = [library for library in libraries_to_install if extract_library_name(library) not in installed_libraries]\n",
+        "if libraries_to_install_filtered:\n",
+        "    print(f\"\u4ee5\u4e0b\u5e93\u5c06\u88ab\u5b89\u88c5\uff1a{libraries_to_install_filtered}\")\n",
+        "    for library in libraries_to_install_filtered:\n",
+        "        install_library(library)\n",
+        "else:\n",
+        "    print(\"\u6240\u6709\u9700\u8981\u5b89\u88c5\u7684\u5e93\u90fd\u5df2\u7ecf\u5b89\u88c5\u3002\")\n",
+        "\n",
+        "# \u5c1d\u8bd5\u5b89\u88c5\u6240\u6709\u672a\u5b89\u88c5\u7684\u5de5\u5177\n",
+        "update_needed = False\n",
+        "for tool in tools_to_install:\n",
+        "    exit_code = subprocess.run([\"dpkg\", \"-s\", tool], capture_output=True).returncode\n",
+        "    if exit_code != 0:\n",
+        "        update_needed = True\n",
+        "        break\n",
+        "    else:\n",
+        "        print(f\"\u3010 {tool} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
+        "if update_needed:\n",
+        "    !apt-get update\n",
+        "    for tool in tools_to_install:\n",
+        "        exit_code = subprocess.run([\"dpkg\", \"-s\", tool], capture_output=True).returncode\n",
+        "        if exit_code != 0:\n",
+        "            !apt-get install -y $tool"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "46a2cd38-32ec-4007-a668-71dd4e236aa6",
       "metadata": {},
       "source": [
