improve the method of update_sd_webui

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -737,97 +737,87 @@
       },
       "outputs": [],
       "source": [
-        "from IPython.display import display,clear_output\n",
-        "clear_output()\n",
+        "from IPython.display import display, clear_output\n",
         "import ipywidgets as widgets\n",
-        "from func.env import setProxy,getWebUIDir\n",
+        "import os\n",
         "\n",
-        "debugging=False\n",
+        "def update_sd_webui(webUIDir, base_args, rollback_hash=None, debugging=False):\n",
+        "    if os.path.exists(webUIDir):\n",
+        "        alertBtn.description = '\u6b63\u5728\u66f4\u65b0...'\n",
+        "        alertBtn.button_style = 'warning'\n",
+        "        alertBtn.icon = 'upload'\n",
         "\n",
-        "alertBtn = widgets.Button(\n",
-        "    value=False,\n",
-        "    description='',\n",
-        "    disabled=False,\n",
-        "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
-        "    tooltip='',\n",
-        "    icon='' # (FontAwesome names without the `fa-` prefix)\n",
-        ")\n",
+        "        update_sd_webui_args = base_args[:]\n",
+        "        update_sd_webui_args += [\n",
+        "            f'cd {webUIDir}',\n",
+        "            '&&',\n",
+        "            'git pull',\n",
+        "            '&&',\n",
+        "        ]\n",
+        "        if rollback_hash:\n",
+        "            update_sd_webui_args += ['git reset --hard ' + rollback_hash, '&&']\n",
+        "        update_sd_webui_args += [\n",
+        "            'python -V',\n",
+        "            '&&',\n",
+        "            'python -m pip install -r requirements_versions.txt --user'\n",
+        "        ]\n",
+        "        update_sd_webui_cmd = (\" \").join(update_sd_webui_args)\n",
+        "        print(update_sd_webui_cmd)\n",
+        "        !$update_sd_webui_cmd\n",
         "\n",
+        "        if not debugging:\n",
+        "            display(alertBtn)\n",
         "\n",
-        "display(alertBtn)\n",
-        "    \n",
-        "if os.path.exists(webUIDir):\n",
-        "    \n",
-        "    alertBtn.description='\u6b63\u5728\u66f4\u65b0...'\n",
-        "    alertBtn.button_style='warning'\n",
-        "    alertBtn.icon='upload'\n",
-        "    \n",
-        "    update_sd_webui_args = base_args[:]\n",
-        "    update_sd_webui_args += [\n",
-        "        f'cd {webUIDir}','&&',\n",
-        "        'git pull','&&',\n",
-        "        # 'git checkout d8f8bcb','&&'\n",
-        "        'python -V',\n",
-        "        '&&',\n",
-        "        # 'conda config --append channels conda-forge','&&',\n",
-        "        # 'conda install --yes --file requirements.txt','&&',\n",
-        "        'python -m pip install -r requirements_versions.txt --user'\n",
-        "    ]\n",
-        "    update_sd_webui_cmd = (\" \").join(update_sd_webui_args)\n",
-        "    print(update_sd_webui_cmd)\n",
-        "    !$update_sd_webui_cmd\n",
+        "        alertBtn.description = '\u66f4\u65b0\u5b8c\u6210!'\n",
+        "        alertBtn.button_style = 'success'\n",
+        "        alertBtn.icon = 'check'\n",
         "\n",
-        "    if debugging==False:\n",
-        "        # clear_output()\n",
-        "        display(alertBtn)\n",
-        "    \n",
-        "    alertBtn.description='\u66f4\u65b0\u5b8c\u6210!'\n",
-        "    alertBtn.button_style='success'\n",
-        "    alertBtn.icon='check'\n",
+        "    else:\n",
+        "        alertBtn.description = '\u5b89\u88c5SDWebUI...'\n",
+        "        alertBtn.button_style = 'info'\n",
+        "        alertBtn.icon = 'download'\n",
         "\n",
-        "else:\n",
-        "    alertBtn.description='\u5b89\u88c5SDWebUI...'\n",
-        "    alertBtn.button_style='info'\n",
-        "    alertBtn.icon='download'\n",
-        "    sd_webui_download_args = base_args[:]\n",
-        "    sd_webui_download_args += [\n",
-        "        f'cd {root_dir}','&&',\n",
-        "        'git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui',\n",
-        "        '&&',\n",
-        "        'cd stable-diffusion-webui','&&',\n",
-        "        'git reset --hard 91ae48fd7e20c60d6374f340cac0939f56d87048','&&',\n",
-        "        # 'git checkout d8f8bcb','&&'\n",
-        "        'python -V',\n",
-        "        '&&',\n",
-        "        # 'conda config --append channels conda-forge','&&',\n",
-        "        # 'conda install --yes --file requirements.txt','&&',\n",
-        "        'python -m pip install -r requirements_versions.txt --user'\n",
-        "    ]\n",
-        "    sd_webui_download_cmd = (\" \").join(sd_webui_download_args)\n",
-        "    print(sd_webui_download_cmd)\n",
-        "    !$sd_webui_download_cmd\n",
-        "    \n",
-        "#     r = !source activate &&\\\n",
-        "#     conda activate py3.10.6 &&\\\n",
-        "#     $proxy &&\\\n",
-        "#     cd $webUIDir &&\\\n",
-        "#     git pull &&\\\n",
-        "#     python -V &&\\\n",
-        "#     python -m pip install -r requirements.txt\n",
+        "        sd_webui_download_args = base_args[:]\n",
+        "        sd_webui_download_args += [\n",
+        "            f'cd {root_dir}',\n",
+        "            '&&',\n",
+        "            'git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui',\n",
+        "            '&&',\n",
+        "            'cd stable-diffusion-webui',\n",
+        "            '&&',\n",
+        "        ]\n",
+        "        if rollback_hash:\n",
+        "            sd_webui_download_args += ['git reset --hard ' + rollback_hash, '&&']\n",
+        "        sd_webui_download_args += [\n",
+        "            'python -V',\n",
+        "            '&&',\n",
+        "            'python -m pip install -r requirements_versions.txt --user'\n",
+        "        ]\n",
+        "        sd_webui_download_cmd = (\" \").join(sd_webui_download_args)\n",
+        "        print(sd_webui_download_cmd)\n",
+        "        !$sd_webui_download_cmd\n",
         "\n",
-        "#     display(r)\n",
-        "    \n",
-        "#     if 'Already up to date.' in r:\n",
-        "#         alertBtn.description='\u66f4\u65b0\u5b8c\u6210!'\n",
-        "#         alertBtn.button_style='success'\n",
-        "#         alertBtn.icon='check'\n",
-        "#     else:\n",
-        "#         alertBtn.description='\u66f4\u65b0\u5931\u8d25!'\n",
-        "#         alertBtn.button_style='danger'\n",
-        "#         alertBtn.icon='exclamation'\n",
+        "def set_alertBtn():\n",
+        "    alertBtn = widgets.Button(\n",
+        "        value=False,\n",
+        "        description='',\n",
+        "        disabled=False,\n",
+        "        button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
+        "        tooltip='',\n",
+        "        icon='' # (FontAwesome names without the `fa-` prefix)\n",
+        "    )\n",
+        "    display(alertBtn)\n",
+        "    return alertBtn\n",
         "\n",
         "\n",
-        "# clear_output(wait=True)"
+        "clear_output()\n",
+        "alertBtn = set_alertBtn()\n",
+        "\n",
+        "update_sd_webui(\n",
+        "    webUIDir,\n",
+        "    base_args,\n",
+        "    rollback_hash='91ae48fd7e20c60d6374f340cac0939f56d87048'\n",
+        ")"
       ]
     },
     {
