--- a/tools/proxy_tools/clash_install_and_setup.ipynb
+++ b/tools/proxy_tools/clash_install_and_setup.ipynb
@@ -82,7 +82,7 @@
         "import subprocess\n",
         "\n",
         "libraries_to_install = [\n",
-        "    'colorama'\n",
+        "    \n",
         "]\n",
         "\n",
         "tools_to_install = [\n",
@@ -335,11 +335,12 @@
         "from IPython.display import display\n",
         "from ipywidgets import Output\n",
         "\n",
-        "import colorama\n",
-        "from colorama import Fore, Style\n",
-        "import re\n",
-        "\n",
-        "colorama.init()\n",
+        "# Define color codes\n",
+        "COLOR_RESET = '\\033[0m'\n",
+        "COLOR_CYAN = '\\033[96m'\n",
+        "COLOR_YELLOW = '\\033[93m'\n",
+        "COLOR_RED = '\\033[91m'\n",
+        "COLOR_MAGENTA = '\\033[95m'\n",
         "\n",
         "def stream_output(process, output_widget):\n",
         "    for line in iter(process.stdout.readline, b''):\n",
@@ -348,16 +349,16 @@
         "        if match:\n",
         "            level = match.group(2)\n",
         "            if level == 'info':\n",
-        "                level_str = Fore.CYAN + '[INFO]' + Style.RESET_ALL\n",
+        "                level_str = COLOR_CYAN + '[INFO]' + COLOR_RESET\n",
         "            elif level == 'warning':\n",
-        "                level_str = Fore.YELLOW + '[WARNING]' + Style.RESET_ALL\n",
+        "                level_str = COLOR_YELLOW + '[WARNING]' + COLOR_RESET\n",
         "            elif level == 'error':\n",
-        "                level_str = Fore.RED + '[ERROR]' + Style.RESET_ALL\n",
+        "                level_str = COLOR_RED + '[ERROR]' + COLOR_RESET\n",
         "            else:\n",
         "                level_str = level\n",
         "            output_widget.append_stdout(level_str + ' ' + match.group(3) + '\\n')\n",
         "        else:\n",
-        "            output_widget.append_stdout(Fore.MAGENTA + '[UNDEFINED]' + Style.RESET_ALL + ' ' + line + '\\n')\n",
+        "            output_widget.append_stdout(COLOR_MAGENTA + '[UNDEFINED]' + COLOR_RESET + ' ' + line + '\\n')\n",
         "    process.stdout.close()\n",
         "\n",
         "def run_clash(root_dir, config_dir, clash_run_dir, config_yaml_dist):\n",
