--- a/tools/proxy_tools/clash_install_and_setup.ipynb
+++ b/tools/proxy_tools/clash_install_and_setup.ipynb
@@ -261,6 +261,7 @@
       "outputs": [],
       "source": [
         "import os\n",
+        "import re\n",
         "    \n",
         "def download_config(root_dir, config_name, config_dir, mmdb_name, mmdb_dir, clash_install_dir, config_yaml_dist,origin_yaml_dist):\n",
         "    clash_install_path = os.path.join(root_dir, clash_install_dir)\n",
@@ -301,16 +302,23 @@
         "import yaml\n",
         "\n",
         "def modify_yaml_config(config_file_path, key_values_dict):\n",
-        "    with open(config_file_path, 'r') as f:\n",
-        "        config = yaml.load(f, Loader=yaml.SafeLoader)\n",
-        "    for key, value in key_values_dict.items():\n",
-        "        keys = key.split('.')\n",
-        "        sub_config = config\n",
-        "        for sub_key in keys[:-1]:\n",
-        "            sub_config = sub_config[sub_key]\n",
-        "        sub_config[keys[-1]] = value\n",
-        "    with open(config_file_path, 'w') as f:\n",
-        "        yaml.dump(config, f, default_flow_style=False)\n",
+        "    try:\n",
+        "        with open(config_file_path, 'r') as f:\n",
+        "            config = yaml.load(f, Loader=yaml.SafeLoader)\n",
+        "        for key, value in key_values_dict.items():\n",
+        "            keys = key.split('.')\n",
+        "            sub_config = config\n",
+        "            for sub_key in keys[:-1]:\n",
+        "                sub_config = sub_config[sub_key]\n",
+        "            sub_config[keys[-1]] = value\n",
+        "        with open(config_file_path, 'w') as f:\n",
+        "            yaml.dump(config, f, default_flow_style=False)\n",
+        "    except yaml.parser.ParserError as e:\n",
+        "        print(\"\\033[1;41;30m\" + f\"\u65e0\u6cd5\u89e3\u6790 YAML \u914d\u7f6e\u6587\u4ef6\uff1a{e}\u3002\" + \"\\033[0m\")\n",
+        "        print(\"\\033[1;41;30m\" + \"\u8bf7\u68c0\u67e5 YAML \u6587\u4ef6\u7684\u5185\u5bb9\u662f\u5426\u6b63\u786e\u3002\" + \"\\033[0m\")\n",
+        "    except (FileNotFoundError, KeyError, TypeError) as e:\n",
+        "        print(\"\\033[1;41;30m\" + f\"\u65e0\u6cd5\u4fee\u6539 YAML \u914d\u7f6e\u6587\u4ef6\uff1a{e}\u3002\" + \"\\033[0m\")\n",
+        "        print(\"\\033[1;41;30m\" + \"\u8bf7\u68c0\u67e5\u6307\u5b9a\u7684\u952e\u6216\u503c\u662f\u5426\u6709\u6548\u3002\" + \"\\033[0m\")\n",
         "\n",
         "def yaml_config_clean(yaml_file_path):\n",
         "    # \u8bfb\u53d6\u914d\u7f6e\u6587\u4ef6\n",
@@ -410,14 +418,6 @@
         "yaml_config_clean(config_yaml_dist)\n",
         "run_clash(root_dir, config_dir, clash_run_dir,config_yaml_dist)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "a95d5d7f-7e6c-4e2a-aee4-180c8af78051",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
