add a model symbol link

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1275,7 +1275,29 @@
         "\n",
         "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
         "for model in vae_models:\n",
-        "    check_model_and_make_symbollink(model, './models/VAE', copy_or_mount)"
+        "    check_model_and_make_symbollink(model, './models/VAE', copy_or_mount)\n",
+        "\n",
+        "\n",
+        "# \u4e3achilloutmix\u8f6f\u8fde\u63a5\u521b\u5efa\u526f\u672c\uff0c\u6307\u5411\u7684\u6587\u4ef6\u4e0d\u53d8\uff0c\u540d\u5b57\u6539\u6210chilloutmix_NiPrunedFp32Fix.safetensors\n",
+        "import os\n",
+        "\n",
+        "def create_copy_and_rename_file(original_file_path, new_file_path):\n",
+        "    # \u68c0\u67e5\u539f\u59cb\u6587\u4ef6\u662f\u5426\u5b58\u5728\n",
+        "    if not os.path.exists(original_file_path):\n",
+        "        print(f\"Error: File {original_file_path} not found.\")\n",
+        "        return\n",
+        "    \n",
+        "    # \u68c0\u67e5\u76ee\u6807\u6587\u4ef6\u662f\u5426\u5df2\u5b58\u5728\n",
+        "    if os.path.exists(new_file_path):\n",
+        "        print(f\"Error: File {new_file_path} already exists.\")\n",
+        "        return\n",
+        "    \n",
+        "    # \u4f7f\u7528\u611f\u53f9\u53f7\u5f00\u5934\u7684\u9b54\u6cd5\u547d\u4ee4\u6765\u521b\u5efa\u526f\u672c\u5e76\u91cd\u547d\u540d\n",
+        "    !cp -P {original_file_path} {new_file_path}\n",
+        "    \n",
+        "    print(f\"File {new_file_path} successfully created.\")\n",
+        "\n",
+        "create_copy_and_rename_file('/openbayes/home/stable-diffusion-webui/models/Stable-diffusion/chilloutmix_NiPrunedFp16.safetensors', '/openbayes/home/stable-diffusion-webui/models/Stable-diffusion/chilloutmix_NiPrunedFp32Fix.safetensors')"
       ]
     },
     {
