--- a/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
+++ b/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
@@ -175,7 +175,7 @@
         "        print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
         "        continue\n",
         "    elif not any(library in installed_library for installed_library in installed_libraries):\n",
-        "        !pip install $library\n",
+        "        !pip install $library --user\n",
         "    else:\n",
         "        print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
         "        \n",
@@ -793,7 +793,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install transformers --upgrade"
+        "!pip install transformers --upgrade --user"
       ]
     },
     {
@@ -880,6 +880,7 @@
         "        ('body_pose_model.pth', 'openpose'),  # body_pose_model\u6a21\u578b\n",
         "        ('hand_pose_model.pth', 'openpose'),  # hand_pose_model\u6a21\u578b\n",
         "        ('upernet_global_small.pth', 'uniformer')  # Segmentation\u7684preprocessor\u6a21\u578b\n",
+        "        ('table5_pidinet.pth', '')\n",
         "    ]\n",
         "\n",
         "    # \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
@@ -889,7 +890,7 @@
         "install_cmd = (' ').join(base_args[:] + [\n",
         "    f'cd {ccp_dir}','&&',\n",
         "    'pip uninstall opencv-python -y','&&',\n",
-        "    'conda install opencv -y','&&',\n",
+        "    'pip install opencv-python --user','&&',\n",
         "    'python -V','&&',\n",
         "    'pwd','&&'\n",
         "    'python install.py'\n",
