--- a/tools/pack_tools/easyPackRootPylibs.ipynb
+++ b/tools/pack_tools/easyPackRootPylibs.ipynb
@@ -153,10 +153,17 @@
         "        os.makedirs(target_dir)\n",
         "    \n",
         "    # \u4f7f\u75287z\u6700\u9ad8\u538b\u7f29\u7ea7\u522b\u7684\u65b9\u6cd5\uff0c\u538b\u7f29/root/.pylibs\u6587\u4ef6\u5939\n",
-        "    !7z a -t7z -m0=lzma2 -mx=9 -mfb=64 -md=32m -ms=on {target_dir}/pylibs.7z {arch_dir}\n",
+        "    target_file = f'{target_dir}/pylibs.7z'\n",
+        "    if not os.path.exists(target_file):\n",
+        "        !7z a -t7z -m0=lzma2 -mx=9 -mfb=64 -md=32m -ms=on {target_file} {arch_dir}\n",
         "    \n",
-        "    print('\u538b\u7f29\u5b8c\u6210\uff01')\n",
-        "\n",
+        "    # \u83b7\u53d6\u6587\u4ef6\u5927\u5c0f\u5e76\u8ba1\u7b97\u538b\u7f29\u6bd4\n",
+        "    file_size = os.path.getsize(target_file)\n",
+        "    !du -sh {target_file}\n",
+        "    arch_size = sum(os.path.getsize(os.path.join(root, file)) for root, dirs, files in os.walk(arch_dir) for file in files)\n",
+        "    compressed_ratio = file_size / arch_size * 100\n",
+        "    print(f'\u538b\u7f29\u5b8c\u6210\uff01\\n\u538b\u7f29\u6bd4: {compressed_ratio:.2f}%')\n",
+        "    \n",
         "compress_pylibs(root_dir)"
       ]
     }
